<resources>
    <string name="app_name">Mental Health Society of Victoria</string>
    <string name="action_resource">Search for Resources</string>
    <string name="action_appointment">Book an Appointment</string>
    <string name="action_map">Locate Resources</string>
    <string-array name="form_names">
        <item name="age">Age</item>
        <item name="identity">Identity</item>
        <item name="resources">Resources</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_begin_form">Begin Form</string>
    <string name="position">%d$1</string>

    <string name="menu_form">Mental Health Society of Greater Victoria</string>
    <string name="nav_resources">Resources</string>
    <string name="nav_appointments">Appointments</string>
    <string name="menu_appointment">Create a Calender Entry</string>
    <string name="nav_mapped_locations">Maps</string>
    <string name="search_resources">Search for resources...</string>
    <string name="create_appointments">Create appointments...</string>
    <string name="add_routes">Add routes...</string>
</resources>