<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_form">

        <fragment
            android:id="@+id/nav_form"
            android:name="org.mhsgv.portal.navigation.FormFragment"
            android:label="@string/nav_resources"
            tools:layout="@layout/fragment_form" />

        <fragment
            android:id="@+id/nav_appointment"
            android:name="org.mhsgv.portal.navigation.AppointmentFragment"
            android:label="@string/nav_appointments"
            tools:layout="@layout/fragment_appointment" />

        <fragment
            android:id="@+id/nav_map"
            android:name="org.mhsgv.portal.navigation.MapFragment"
            android:label="@string/nav_mapped_locations"
            tools:layout="@layout/fragment_map" />
</navigation>